--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <a href="anime/dragon-ball.html"><img src="unnamed (4).jpg" alt="Dragon Ball Prison Planet Full Movie"></a>
       <a href="anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html"><img src="unnamed (1).jpg" alt="Shinchan The Legend of Ninja Mononoke (Hindi)"></a>
       <a href="anime/WIND BREAKER S2.html"><img src="WIND BREAKER S2.jpg" alt="WIND BREAKER Season 2"></a>
-      <a href="anime/tokyo-revengers.html"><img src="tokyo-revengers.jpg" alt="Tokyo Revengers"></a>
+      <a href="anime/tokyo-revengers.html"><img src="unnamed (2).jpg" alt="Tokyo Revengers"></a>
     </div>
   </section>
 
