--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <!-- Header with Button -->
   <header id="header">
     <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 inline-block rounded-full" />
-    <a href="index.html" class="main-btn">Go to Doosh Hub</a>
+    <a href="index.2.html" class="main-btn">Go to Doosh Hub</a>
   </header>
 
   <!-- Carousel Section (Top Slide) -->
