--- a/anime/The_Curious_Case_of_Benjamin_Button_2008_Hindi.html
+++ b/anime/The_Curious_Case_of_Benjamin_Button_2008_Hindi.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The_Curious_Case_of_Benjamin_Button_2008_Hindi</title>
+  <title>The Curious Case of Benjamin Button (2008) Hindi</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     #adBox {
@@ -38,34 +38,45 @@
     }
   </style>
 </head>
-<body class="bg-black text-white font-mono">
 
-  <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">The_Curious_Case_of_Benjamin_Button_2008_Hindi</h1>
-    <p class="text-gray-400 mb-6">The_Curious_Case_of_Benjamin_Button_2008_Hindi</p>
+<body class="bg-black text-white font-sans">
+
+  <div class="p-6 max-w-5xl mx-auto">
+    <h1 class="text-4xl font-bold text-pink-600 mb-2 text-center">The Curious Case of Benjamin Button (2008) Hindi</h1>
+    <p class="text-gray-400 text-center mb-6">Experience the full movie in Hindi Dubbed</p>
 
     <!-- Video Player -->
-    <div class="mb-4">
-      <iframe id="videoPlayer" src="https://drive.google.com/file/d/19OFECzh-kbph92bSJ9WpsanhaFkpzXAE/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
-      <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">The_Curious_Case_of_Benjamin_Button_2008_Hindi</h2>
-        <p id="episodeDesc" class="text-gray-400">The_Curious_Case_of_Benjamin_Button_2008_Hindi</p>
-        <p id="uploadDate" class="text-gray-600 text-sm">The_Curious_Case_of_Benjamin_Button_2008_Hindi</p>
+    <div class="relative bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+      <video id="videoPlayer" class="w-full" controls preload="metadata" poster="https://via.placeholder.com/800x450?text=Loading+Video...">
+        <source src="https://yourserver.com/path/to/your-video.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+      </video>
+
+      <!-- 10s Control Buttons -->
+      <div class="flex justify-center gap-4 py-4 bg-gray-800">
+        <button id="backwardBtn" class="bg-pink-600 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded">⏪ 10s Back</button>
+        <button id="forwardBtn" class="bg-pink-600 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded">10s Forward ⏩</button>
       </div>
     </div>
 
-    <!-- Episode List -->
-    <div id="episodeList" class="space-y-3"></div>
+    <!-- Video Info -->
+    <div class="mt-6 text-center">
+      <h2 id="episodeTitle" class="text-2xl font-semibold">The Curious Case of Benjamin Button</h2>
+      <p id="episodeDesc" class="text-gray-400 mt-2">A man ages in reverse — a magical story of love and time.</p>
+      <p id="uploadDate" class="text-gray-600 text-sm mt-1">Uploaded: 2025-04-25</p>
+    </div>
 
-    <!-- New Separate Ad Placement -->
-    <div class="mt-6">
+    <!-- Episode List -->
+    <div id="episodeList" class="mt-8 space-y-3"></div>
+
+    <!-- Ad Placement -->
+    <div class="mt-10">
       <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
       <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
     </div>
-
   </div>
 
-  <!-- Ad Box (old rotating ads) -->
+  <!-- Floating Ad Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
@@ -92,20 +103,32 @@
     </div>
   </div>
 
+  <!-- Scripts -->
   <script type="text/javascript">
     window.onbeforeunload = null;
 
+    const video = document.getElementById('videoPlayer');
+    const forwardBtn = document.getElementById('forwardBtn');
+    const backwardBtn = document.getElementById('backwardBtn');
+
+    forwardBtn.addEventListener('click', () => {
+      video.currentTime += 10;
+    });
+
+    backwardBtn.addEventListener('click', () => {
+      video.currentTime -= 10;
+    });
+
     const episodes = [
       {
-        title: "The_Curious_Case_of_Benjamin_Button_2008_Hindi",
-        link: "https://drive.google.com/file/d/19OFECzh-kbph92bSJ9WpsanhaFkpzXAE/preview",
-        description: "The_Curious_Case_of_Benjamin_Button_2008_Hindi",
+        title: "The Curious Case of Benjamin Button (2008) Hindi",
+        link: "https://yourserver.com/path/to/your-video.mp4",
+        description: "A man ages in reverse — a magical story of love and time.",
         uploadDate: "2025-04-25"
       }
     ];
 
     const list = document.getElementById('episodeList');
-    const player = document.getElementById('videoPlayer');
     const title = document.getElementById('episodeTitle');
     const desc = document.getElementById('episodeDesc');
     const date = document.getElementById('uploadDate');
@@ -115,7 +138,8 @@
       btn.className = "w-full text-left bg-gray-800 hover:bg-gray-700 rounded p-3 shadow";
       btn.innerText = ep.title;
       btn.onclick = () => {
-        player.src = ep.link;
+        video.src = ep.link;
+        video.play();
         title.innerText = ep.title;
         desc.innerText = ep.description;
         date.innerText = "Uploaded: " + ep.uploadDate;
@@ -154,10 +178,11 @@
       });
     })();
 
-    // Close ad
+    // Close Ad
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
   </script>
+
 </body>
 </html>
