--- a/index.2.html
+++ b/index.2.html
@@ -271,7 +271,7 @@
     const animeData = {
       "wind-breaker season 1 ": { title: "WIND BREAKER Season 1 in Hindi", cover: "InShot_20250427_105208488.jpg", link: "anime/windbreakerseason1.html" },
       "dragon-ball": { title: "Dragon Ball Prison Planet Full Movie", cover: "unnamed (4).jpg", link: "anime/dragon-ball.html" },
-         "The_Curious_Case_of_Benjamin_Button_2008_Hindi": { title: "The_Curious_Case_of_Benjamin_Button_2008_Hindi", cover: "download (1).jpg", link: "The_Curious_Case_of_Benjamin_Button_2008_Hindi" },
+         "The_Curious_Case_of_Benjamin_Button_2008_Hindi": { title: "The_Curious_Case_of_Benjamin_Button_2008_Hindi", cover: "download (1).jpg", link: "anime/The_Curious_Case_of_Benjamin_Button_2008_Hindi.html" },
       "shinchan-ninja": { title: "Shinchan The Legend of Ninja Mononoke (Hindi)", cover: "unnamed (1).jpg", link: "anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html" },
       "wind-breaker": { title: "WIND BREAKER Season 2 in Hindi", cover: "WIND BREAKER S2.jpg", link: "anime/WIND BREAKER S2.html" },
       "tokyo-revengers": { title: "Tokyo Revengers Season 1", cover: "unnamed (2).jpg", link: "anime/Tokyo Revengers season 1.html" },
