--- a/anime/The_Curious_Case_of_Benjamin_Button_2008_Hindi.html
+++ b/anime/The_Curious_Case_of_Benjamin_Button_2008_Hindi.html
@@ -38,45 +38,34 @@
     }
   </style>
 </head>
+<body class="bg-black text-white font-mono">
 
-<body class="bg-black text-white font-sans">
-
-  <div class="p-6 max-w-5xl mx-auto">
-    <h1 class="text-4xl font-bold text-pink-600 mb-2 text-center">The Curious Case of Benjamin Button (2008) Hindi</h1>
-    <p class="text-gray-400 text-center mb-6">Experience the full movie in Hindi Dubbed</p>
+  <div class="p-6">
+    <h1 class="text-4xl font-bold text-pink-600">The Curious Case of Benjamin Button (2008) Hindi</h1>
+    <p class="text-gray-400 mb-6">The Curious Case of Benjamin Button (2008) Hindi</p>
 
     <!-- Video Player -->
-    <div class="relative bg-gray-900 rounded-lg overflow-hidden shadow-lg">
-      <video id="videoPlayer" class="w-full" controls preload="metadata" poster="https://via.placeholder.com/800x450?text=Loading+Video...">
-        <source src="https://yourserver.com/path/to/your-video.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-      </video>
-
-      <!-- 10s Control Buttons -->
-      <div class="flex justify-center gap-4 py-4 bg-gray-800">
-        <button id="backwardBtn" class="bg-pink-600 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded">⏪ 10s Back</button>
-        <button id="forwardBtn" class="bg-pink-600 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded">10s Forward ⏩</button>
+    <div class="mb-4">
+      <iframe id="videoPlayer" src="https://drive.google.com/file/d/19OFECzh-kbph92bSJ9WpsanhaFkpzXAE/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
+      <div class="mt-2">
+        <h2 id="episodeTitle" class="text-xl font-semibold">The Curious Case of Benjamin Button (2008) Hindi</h2>
+        <p id="episodeDesc" class="text-gray-400">The Curious Case of Benjamin Button (2008) Hindi</p>
+        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
 
-    <!-- Video Info -->
-    <div class="mt-6 text-center">
-      <h2 id="episodeTitle" class="text-2xl font-semibold">The Curious Case of Benjamin Button</h2>
-      <p id="episodeDesc" class="text-gray-400 mt-2">A man ages in reverse — a magical story of love and time.</p>
-      <p id="uploadDate" class="text-gray-600 text-sm mt-1">Uploaded: 2025-04-25</p>
-    </div>
-
     <!-- Episode List -->
-    <div id="episodeList" class="mt-8 space-y-3"></div>
+    <div id="episodeList" class="space-y-3"></div>
 
-    <!-- Ad Placement -->
-    <div class="mt-10">
+    <!-- New Separate Ad Placement -->
+    <div class="mt-6">
       <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
       <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
     </div>
+
   </div>
 
-  <!-- Floating Ad Box -->
+  <!-- Ad Box (old rotating ads) -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
@@ -103,32 +92,20 @@
     </div>
   </div>
 
-  <!-- Scripts -->
   <script type="text/javascript">
     window.onbeforeunload = null;
-
-    const video = document.getElementById('videoPlayer');
-    const forwardBtn = document.getElementById('forwardBtn');
-    const backwardBtn = document.getElementById('backwardBtn');
-
-    forwardBtn.addEventListener('click', () => {
-      video.currentTime += 10;
-    });
-
-    backwardBtn.addEventListener('click', () => {
-      video.currentTime -= 10;
-    });
 
     const episodes = [
       {
         title: "The Curious Case of Benjamin Button (2008) Hindi",
-        link: "https://yourserver.com/path/to/your-video.mp4",
-        description: "A man ages in reverse — a magical story of love and time.",
+        link: "https://drive.google.com/file/d/19OFECzh-kbph92bSJ9WpsanhaFkpzXAE/preview",
+        description: "The Curious Case of Benjamin Button (2008) Hindi",
         uploadDate: "2025-04-25"
       }
     ];
 
     const list = document.getElementById('episodeList');
+    const player = document.getElementById('videoPlayer');
     const title = document.getElementById('episodeTitle');
     const desc = document.getElementById('episodeDesc');
     const date = document.getElementById('uploadDate');
@@ -138,8 +115,7 @@
       btn.className = "w-full text-left bg-gray-800 hover:bg-gray-700 rounded p-3 shadow";
       btn.innerText = ep.title;
       btn.onclick = () => {
-        video.src = ep.link;
-        video.play();
+        player.src = ep.link;
         title.innerText = ep.title;
         desc.innerText = ep.description;
         date.innerText = "Uploaded: " + ep.uploadDate;
@@ -178,11 +154,10 @@
       });
     })();
 
-    // Close Ad
+    // Close ad
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
   </script>
-
 </body>
-</html>
+    </html>
