--- a/index.2.html
+++ b/index.2.html
@@ -274,6 +274,7 @@
          "The_Curious_Case_of_Benjamin_Button_2008_Hindi": { title: "The_Curious_Case_of_Benjamin_Button_2008_Hindi", cover: "download (1).jpg", link: "anime/The_Curious_Case_of_Benjamin_Button_2008_Hindi.html" },
       "shinchan-ninja": { title: "Shinchan The Legend of Ninja Mononoke (Hindi)", cover: "unnamed (1).jpg", link: "anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html" },
       "wind-breaker": { title: "WIND BREAKER Season 2 in Hindi", cover: "WIND BREAKER S2.jpg", link: "anime/WIND BREAKER S2.html" },
+      "Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed": { title: "Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed", cover: "photos/p15366809_v_h10_aw.jpg", link: "anime/Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed.html" },
       "tokyo-revengers": { title: "Tokyo Revengers Season 1", cover: "unnamed (2).jpg", link: "anime/Tokyo Revengers season 1.html" },
       "Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie": { title: "Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie", cover: "download (3).jpg", link: "anime/Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie.html" },
       "flight-914": { title: "FLIGHT 914 - Hollywood Action Movie", cover: "get.jpg", link: "anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html" },
