--- a/index.2.html
+++ b/index.2.html
@@ -277,6 +277,9 @@
        "Justice_League_2017_Hindi_Dubbed": { title: "Justice_League_2017_Hindi_Dubbed", cover: "photos/images (1).jpg", link: "anime/Justice_League_2017_Hindi_Dubbed_Full_Movie.html" },
       "Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed": { title: "Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed", cover: "photos/p15366809_v_h10_aw.jpg", link: "anime/Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed.html" },
       "tokyo-revengers": { title: "Tokyo Revengers Season 1", cover: "unnamed (2).jpg", link: "anime/Tokyo Revengers season 1.html" },
+      "Kesari_Chapter_2_The_Untold_Story_Of_Jallianwala": { title: "Kesari_Chapter_2_The_Untold_Story_Of_Jallianwala", cover: "photos/download (4).jpg", link: "anime/Kesari_Chapter_2_The_Untold_Story_Of_Jallianwala.html" },
+      "The_Dark_Knight": { title: "The_Dark_Knight", cover: "photos/74906de0-d644-4b0d-bf22-e2a321583a93.avif", link: "anime/The_Dark_Knight.html" },
+      "Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie": { title: "Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie", cover: "photos/eternals-6qggyrv4n3sv5r3n.jpg", link: "anime/Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie.html" },
       "Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie": { title: "Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie", cover: "download (3).jpg", link: "anime/Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie.html" },
       "flight-914": { title: "FLIGHT 914 - Hollywood Action Movie", cover: "get.jpg", link: "anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html" },
       "the shawshank redemption full movie in hindi ": { title: "the shawshank redemption full movie in hindi", cover: "download.jpg", link: "anime/the shawshank redemption full movie in hindi.html" },
