--- a/index.2.html
+++ b/index.2.html
@@ -222,6 +222,12 @@
 
   <!-- Scroll-to-Top Button -->
   <button id="scrollToTop" onclick="scrollToTop()">↑</button>
+<!-- Support Us Button -->
+<a href="support.html">
+  <button class="support-btn bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600 mr-4">
+    Support Us
+  </button>
+</a>
 
   <!-- Header -->
   <header id="header" class="p-4">
