--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     }
 
     /* Button Styling */
-    .main-btn {
+    .main-btn, .support-btn, #discordBtn, .footer-btn {
       background-color: #ff00ff;
       color: white;
       padding: 15px 30px;
@@ -83,7 +83,7 @@
       margin-top: 20px;
     }
 
-    .main-btn:hover {
+    .main-btn:hover, .support-btn:hover, #discordBtn:hover, .footer-btn:hover {
       background-color: #ff4500;
     }
 
@@ -101,27 +101,6 @@
       text-align: center;
       display: block;
       text-decoration: none;
-    }
-
-    #discordBtn:hover {
-      background-color: #5b6eae;
-    }
-
-    /* New Support Us Button Styling */
-    .support-btn {
-      background-color: #ff5733;
-      color: white;
-      padding: 15px 30px;
-      border-radius: 10px;
-      font-size: 1.5rem;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-      display: inline-block;
-      margin-top: 30px;
-    }
-
-    .support-btn:hover {
-      background-color: #ff2a00;
     }
 
     /* Carousel Styling */
@@ -180,9 +159,14 @@
       padding: 10px;
     }
 
+    /* Footer Button */
+    .footer-btn {
+      margin-top: 30px;
+    }
+
     /* Responsive Adjustments */
     @media screen and (max-width: 768px) {
-      .main-btn {
+      .main-btn, .support-btn, .footer-btn {
         font-size: 1.2rem;
         padding: 10px 20px;
       }
@@ -198,7 +182,7 @@
     }
 
     @media screen and (max-width: 480px) {
-      .main-btn {
+      .main-btn, .support-btn, .footer-btn {
         font-size: 1rem;
         padding: 8px 15px;
       }
@@ -224,7 +208,6 @@
   <!-- Header with Button -->
   <header id="header">
     <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 inline-block rounded-full" />
-    <a href="index.2.html" class="main-btn">Go to Doosh Hub</a>
   </header>
 
   <!-- Main Content -->
@@ -232,8 +215,9 @@
     <h1 class="text-3xl text-center font-bold mb-6">About Doosh Hub</h1>
     <p>Welcome to Doosh Hub, your premier online destination for a wide range of global entertainment. We bring the best of Bollywood, Hollywood, anime, K-dramas, C-dramas, and much more to your screen, offering an unparalleled entertainment experience that caters to all tastes...</p>
     <p>Explore our content, connect with other fans, and dive into the world of your favorite shows, movies, and animes. Whether you're into action-packed thrillers, emotional dramas, or light-hearted comedies, we have something for everyone!</p>
-    
-    <!-- New Support Us Button -->
+
+    <!-- Buttons after the About message -->
+    <a href="index.2.html" class="main-btn">Go to Doosh Hub</a>
     <a href="support.html" class="support-btn">Support Us</a>
   </div>
 
@@ -250,7 +234,8 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Doosh Hub. All rights reserved. | <a href="contact.html" class="text-purple-500">Contact Us</a> | <a href="copyright.html" class="text-purple-500">Copyright Information</a></p>
+    <a href="contact.html" class="footer-btn">Contact Us</a> | 
+    <a href="copyright.html" class="footer-btn">Copyright Information</a>
   </footer>
 
 </body>
