--- a/index.2.html
+++ b/index.2.html
@@ -250,7 +250,12 @@
     <div class="skeleton skeleton-card"></div>
     <div class="skeleton skeleton-card"></div>
   </main>
-
+<!-- Support Us Button -->
+<a href="support.html">
+  <button class="support-btn bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600 mr-4">
+    Support Us
+  </button>
+</a>
   <!-- Ad Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
