--- a/index.html
+++ b/index.html
@@ -3,147 +3,186 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Doosh Hub</title>
+  <title>Doosh Hub - Watch Animes, Movies & More</title>
+
+  <!-- Favicon -->
+  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
+
+  <!-- Open Graph Meta -->
+  <meta property="og:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
+  <meta property="og:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
+  <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
+  <meta property="og:url" content="https://www.dooshtoons.linkpc.net/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Meta -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
+  <meta name="twitter:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
+  <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
+
   <style>
-    /* Basic Reset */
-    * {
+    /* Wildfire Background */
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    /* Body with sliding background */
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(45deg, #ff416c, #ff4b2b, #ff416c, #ff4b2b);
+      background-size: 400% 400%;
+      animation: wildfire 15s ease infinite;
+      font-family: 'Poppins', sans-serif;
       color: white;
       text-align: center;
-      background: url('bg1.jpg') no-repeat center center fixed;
-      background-size: cover;
-      animation: slideBackground 30s infinite alternate;
-    }
-
-    @keyframes slideBackground {
-      0% {
-        background-image: url('bg1.jpg');
-      }
-      33% {
-        background-image: url('bg2.jpg');
-      }
-      66% {
-        background-image: url('bg3.jpg');
-      }
-      100% {
-        background-image: url('bg1.jpg');
-      }
-    }
-
-    /* Main Content */
-    .main-content {
-      padding: 80px 20px 40px;
-      background: rgba(0, 0, 0, 0.5);
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
     }
 
-    .main-content h1 {
-      font-size: 3rem;
+    @keyframes wildfire {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+
+    /* Hero Slider */
+    .hero {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    .hero h1 {
+      font-size: 2.8rem;
       margin-bottom: 20px;
     }
 
-    .main-content p {
+    .hero p {
       font-size: 1.2rem;
-      margin-bottom: 16px;
-      max-width: 800px;
-      line-height: 1.6;
+      max-width: 900px;
+      margin: 0 auto 30px;
     }
 
-    /* Wildfire Button Styling */
-    .wildfire-btn {
+    .buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+      margin-bottom: 40px;
+    }
+
+    /* Glitter Button */
+    .button {
+      position: relative;
       display: inline-block;
       padding: 15px 30px;
-      margin: 12px;
-      font-size: 1.1rem;
-      color: white;
-      text-decoration: none;
-      border: 2px solid #ff6a00;
+      font-size: 18px;
+      color: #fff;
+      background: #222;
+      border: 2px solid #00e6e6;
       border-radius: 50px;
-      position: relative;
+      text-decoration: none;
       overflow: hidden;
-      background-color: transparent;
-      transition: all 0.4s ease;
+      transition: 0.3s;
+      cursor: pointer;
     }
 
-    .wildfire-btn::before {
+    .button::before {
       content: "";
       position: absolute;
       top: -50%;
       left: -50%;
       width: 200%;
       height: 200%;
-      background: linear-gradient(45deg, #ff6a00, #ffcc00, #ff6a00, #ff0000, #ff6a00);
-      background-size: 400% 400%;
-      animation: wildfire 3s linear infinite;
-      z-index: 0;
-      opacity: 0.7;
-      transform: rotate(25deg);
-    }
-
-    .wildfire-btn span {
-      position: relative;
+      background: radial-gradient(circle, #00e6e6 10%, transparent 10.01%);
+      background-size: 10% 10%;
+      animation: glitter 3s linear infinite;
       z-index: 1;
+      opacity: 0.5;
     }
 
-    .wildfire-btn:hover {
-      transform: scale(1.08);
-      box-shadow: 0 0 20px #ff6a00;
+    .button span {
+      position: relative;
+      z-index: 2;
     }
 
-    @keyframes wildfire {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
+    @keyframes glitter {
+      0% {background-position: 0 0;}
+      100% {background-position: 100% 100%;}
     }
 
     /* Footer Buttons */
     .footer-buttons {
-      margin-top: 40px;
+      margin-top: auto;
+      padding: 20px;
       display: flex;
-      flex-direction: column;
-      gap: 20px;
+      justify-content: center;
+      gap: 15px;
+      flex-wrap: wrap;
     }
 
-    @media (min-width: 600px) {
-      .footer-buttons {
-        flex-direction: row;
-      }
+    /* Auto Slide Animation */
+    .slider-texts {
+      animation: slideText 12s infinite;
     }
+
+    @keyframes slideText {
+      0%, 20% { transform: translateY(0); }
+      25%, 45% { transform: translateY(-100%); }
+      50%, 70% { transform: translateY(-200%); }
+      75%, 95% { transform: translateY(-300%); }
+      100% { transform: translateY(0); }
+    }
+
+    .slider-container {
+      height: 70px;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .slider-texts p {
+      margin: 0;
+      height: 70px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5rem;
+    }
+
   </style>
 </head>
-
 <body>
 
-  <div class="main-content">
-    <h1>About Doosh Hub</h1>
-    <p>Welcome to Doosh Hub — your ultimate gateway to global entertainment!</p>
-    <p>Step into a world where Bollywood blockbusters, Hollywood hits, mesmerizing anime, heart-fluttering K-dramas, addictive C-dramas, and so much more come alive, all in one place.</p>
-    <p>At Doosh Hub, we don’t just bring you entertainment — we bring you experiences. Discover stories that thrill you, move you, and make you laugh out loud. Dive into action-packed adventures, soul-stirring dramas, and feel-good comedies, handpicked to match every mood and every moment.</p>
-    <p>Connect. Explore. Indulge. Join a vibrant community of fans from around the world, explore endless content, and lose yourself in the magic of your favorite movies, shows, and anime.</p>
-    <p>Whatever your passion, Doosh Hub is where it all begins. Your next binge-worthy obsession is just a click away. Welcome home!</p>
+  <div class="hero">
+    <h1>Welcome to Doosh Hub</h1>
 
-    <!-- Footer Buttons -->
-    <div class="footer-buttons">
-      <a href="index.2.html" class="wildfire-btn"><span>Go to Doosh Hub</span></a>
-      <a href="support.html" class="wildfire-btn"><span>Support Us</span></a>
+    <div class="slider-container">
+      <div class="slider-texts">
+        <p>Bollywood Blockbusters</p>
+        <p>Hollywood Hits</p>
+        <p>Mesmerizing Anime</p>
+        <p>Heart-Fluttering K-Dramas</p>
+      </div>
     </div>
+
+    <p>
+      Step into a world where Bollywood blockbusters, Hollywood hits, mesmerizing anime, heart-fluttering K-dramas, addictive C-dramas, and so much more come alive, all in one place.<br><br>
+      At Doosh Hub, we don’t just bring you entertainment — we bring you experiences. Discover stories that thrill you, move you, and make you laugh out loud. Dive into action-packed adventures, soul-stirring dramas, and feel-good comedies, handpicked to match every mood and every moment.<br><br>
+      Connect. Explore. Indulge. Join a vibrant community of fans from around the world, explore endless content, and lose yourself in the magic of your favorite movies, shows, and anime.<br><br>
+      Whatever your passion, Doosh Hub is where it all begins. Your next binge-worthy obsession is just a click away. Welcome home!
+    </p>
+
+    <div class="buttons">
+      <a href="#" class="button"><span>Go to Doosh Hub</span></a>
+      <a href="#" class="button"><span>Support Us</span></a>
+      <a href="#" class="button"><span>Join Discord</span></a>
+      <a href="#" class="button"><span>Contact</span></a>
+    </div>
+  </div>
+
+  <div class="footer-buttons">
+    <a href="#" class="button"><span>Join Discord</span></a>
+    <a href="#" class="button"><span>© 2025 Doosh Hub</span></a>
   </div>
 
 </body>
