--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Doosh Hub - Watch Animes, Movies & More</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DOOSH HUB</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Favicon -->
   <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
 
-  <!-- Open Graph Meta -->
+  <!-- Open Graph Meta (for Facebook, WhatsApp sharing) -->
   <meta property="og:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
   <meta property="og:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
   <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
@@ -22,168 +24,126 @@
   <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
 
   <style>
-    /* Wildfire Background */
+    /* Neon Sparkling Animation */
+    @keyframes neonGlow {
+      0% {
+        text-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 40px #ff4500, 0 0 60px #ff4500;
+      }
+      50% {
+        text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff0000, 0 0 60px #ff4500, 0 0 80px #ff4500;
+      }
+      100% {
+        text-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 40px #ff4500, 0 0 60px #ff4500;
+      }
+    }
+
     body {
+      background: #0f0f0f;
+      font-family: 'Roboto', sans-serif;
+      overflow-x: hidden;
+      color: white;
+      animation: fireGlow 10s infinite alternate;
       margin: 0;
       padding: 0;
-      background: linear-gradient(45deg, #ff416c, #ff4b2b, #ff416c, #ff4b2b);
-      background-size: 400% 400%;
-      animation: wildfire 15s ease infinite;
-      font-family: 'Poppins', sans-serif;
-      color: white;
-      text-align: center;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
     }
 
-    @keyframes wildfire {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
-    }
-
-    /* Hero Slider */
-    .hero {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding: 20px;
-    }
-
-    .hero h1 {
-      font-size: 2.8rem;
-      margin-bottom: 20px;
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-      max-width: 900px;
-      margin: 0 auto 30px;
-    }
-
-    .buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      margin-bottom: 40px;
-    }
-
-    /* Glitter Button */
+    /* Buttons with Neon Sparkling effect */
     .button {
-      position: relative;
-      display: inline-block;
+      background-color: #ff00ff;
+      color: white;
       padding: 15px 30px;
-      font-size: 18px;
-      color: #fff;
-      background: #222;
-      border: 2px solid #00e6e6;
-      border-radius: 50px;
-      text-decoration: none;
-      overflow: hidden;
-      transition: 0.3s;
-      cursor: pointer;
-    }
-
-    .button::before {
-      content: "";
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: radial-gradient(circle, #00e6e6 10%, transparent 10.01%);
-      background-size: 10% 10%;
-      animation: glitter 3s linear infinite;
-      z-index: 1;
-      opacity: 0.5;
-    }
-
-    .button span {
-      position: relative;
-      z-index: 2;
-    }
-
-    @keyframes glitter {
-      0% {background-position: 0 0;}
-      100% {background-position: 100% 100%;}
-    }
-
-    /* Footer Buttons */
-    .footer-buttons {
-      margin-top: auto;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      flex-wrap: wrap;
-    }
-
-    /* Auto Slide Animation */
-    .slider-texts {
-      animation: slideText 12s infinite;
-    }
-
-    @keyframes slideText {
-      0%, 20% { transform: translateY(0); }
-      25%, 45% { transform: translateY(-100%); }
-      50%, 70% { transform: translateY(-200%); }
-      75%, 95% { transform: translateY(-300%); }
-      100% { transform: translateY(0); }
-    }
-
-    .slider-container {
-      height: 70px;
-      overflow: hidden;
-      position: relative;
-    }
-
-    .slider-texts p {
-      margin: 0;
-      height: 70px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      border-radius: 10px;
       font-size: 1.5rem;
+      font-weight: bold;
+      text-align: center;
+      display: inline-block;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
+      animation: neonGlow 1.5s infinite alternate;
     }
 
+    .button:hover {
+      background-color: #ff4500;
+    }
+
+    /* Button Container Styling */
+    .button-container {
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    /* Other Styles */
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 9999;
+      transition: all 0.3s ease-in-out;
+      padding: 20px;
+    }
+
+    /* Discord Button */
+    #discordBtn {
+      position: fixed;
+      bottom: 80px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #7289da;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-size: 1.2rem;
+      text-align: center;
+      display: block;
+      text-decoration: none;
+      animation: neonGlow 1.5s infinite alternate;
+    }
+
+    #discordBtn:hover {
+      background-color: #5b6eae;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 50px;
+      font-size: 1rem;
+      color: white;
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 10px;
+    }
   </style>
 </head>
+
 <body>
+  <!-- Discord Button -->
+  <a id="discordBtn" href="https://discord.gg/Wj32meHh" target="_blank">Join Us on Discord</a>
 
-  <div class="hero">
-    <h1>Welcome to Doosh Hub</h1>
+  <!-- Header with Button -->
+  <header id="header">
+    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 inline-block rounded-full" />
+    <a href="index.2.html" class="button">Go to Doosh Hub</a>
+  </header>
 
-    <div class="slider-container">
-      <div class="slider-texts">
-        <p>Bollywood Blockbusters</p>
-        <p>Hollywood Hits</p>
-        <p>Mesmerizing Anime</p>
-        <p>Heart-Fluttering K-Dramas</p>
-      </div>
-    </div>
+  <!-- Main Content -->
+  <div class="main-content">
+    <h1 class="text-3xl text-center font-bold mb-6">About Doosh Hub</h1>
+    <p>Welcome to Doosh Hub — your ultimate gateway to global entertainment! Step into a world where Bollywood blockbusters, Hollywood hits, mesmerizing anime, heart-fluttering K-dramas, addictive C-dramas, and so much more come alive, all in one place.</p>
+    <p>At Doosh Hub, we don’t just bring you entertainment — we bring you experiences. Discover stories that thrill you, move you, and make you laugh out loud. Dive into action-packed adventures, soul-stirring dramas, and feel-good comedies, handpicked to match every mood and every moment.</p>
+    <p>Connect. Explore. Indulge. Join a vibrant community of fans from around the world, explore endless content, and lose yourself in the magic of your favorite movies, shows, and anime. Whatever your passion, Doosh Hub is where it all begins.</p>
+    <p>Your next binge-worthy obsession is just a click away. Welcome home!</p>
 
-    <p>
-      Step into a world where Bollywood blockbusters, Hollywood hits, mesmerizing anime, heart-fluttering K-dramas, addictive C-dramas, and so much more come alive, all in one place.<br><br>
-      At Doosh Hub, we don’t just bring you entertainment — we bring you experiences. Discover stories that thrill you, move you, and make you laugh out loud. Dive into action-packed adventures, soul-stirring dramas, and feel-good comedies, handpicked to match every mood and every moment.<br><br>
-      Connect. Explore. Indulge. Join a vibrant community of fans from around the world, explore endless content, and lose yourself in the magic of your favorite movies, shows, and anime.<br><br>
-      Whatever your passion, Doosh Hub is where it all begins. Your next binge-worthy obsession is just a click away. Welcome home!
-    </p>
-
-    <div class="buttons">
-      <a href="#" class="button"><span>Go to Doosh Hub</span></a>
-      <a href="#" class="button"><span>Support Us</span></a>
-      <a href="#" class="button"><span>Join Discord</span></a>
-      <a href="#" class="button"><span>Contact</span></a>
+    <div class="button-container">
+      <a href="support.html" class="button">Support Us</a>
+      <a href="copyright.html" class="button">Copyright Info</a>
     </div>
   </div>
 
-  <div class="footer-buttons">
-    <a href="#" class="button"><span>Join Discord</span></a>
-    <a href="#" class="button"><span>© 2025 Doosh Hub</span></a>
-  </div>
-
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Doosh Hub. All rights reserved. | <a href="contact.html" class="text-purple-500">Contact Us</a></p>
+  </footer>
 </body>
+
 </html>
